Fixed scrollbar styles

--- a/docs/assets/scss/common/_dark.scss
+++ b/docs/assets/scss/common/_dark.scss
@@ -16,9 +16,9 @@ $link-color-dark: $blue-300;
 $button-color-dark: $link-color-dark;
 $focus-color-dark: lighten($link-color-dark, 2.5%);
 
-$navbar-dark-color:                 $body-color-dark;
-$navbar-dark-hover-color:           $link-color-dark;
-$navbar-dark-active-color:          $link-color-dark;
+$navbar-dark-color: $body-color-dark;
+$navbar-dark-hover-color: $link-color-dark;
+$navbar-dark-active-color: $link-color-dark;
 
 /** Theme styles */
 
@@ -55,7 +55,7 @@ $navbar-dark-active-color:          $link-color-dark;
   color: $navbar-dark-color;
 }
 
-[data-dark-mode] body .show > .btn-doks-light,
+[data-dark-mode] body .show>.btn-doks-light,
 [data-dark-mode] body .btn-doks-light:hover,
 [data-dark-mode] body .btn-doks-light:active {
   color: $link-color-dark;
@@ -125,8 +125,8 @@ $navbar-dark-active-color:          $link-color-dark;
   color: $navbar-dark-disabled-color;
 }
 
-[data-dark-mode] body .navbar-light .navbar-nav .show > .nav-link,
-[data-dark-mode] body .navbar-light .navbar-nav .active > .nav-link,
+[data-dark-mode] body .navbar-light .navbar-nav .show>.nav-link,
+[data-dark-mode] body .navbar-light .navbar-nav .active>.nav-link,
 [data-dark-mode] body .navbar-light .navbar-nav .nav-link.show,
 [data-dark-mode] body .navbar-light .navbar-nav .nav-link.active {
   color: $navbar-dark-active-color;
@@ -333,38 +333,45 @@ $navbar-dark-active-color:          $link-color-dark;
 }
 
 [data-dark-mode] body .docs-links,
+[data-dark-mode] body .offcanvas-body,
 [data-dark-mode] body .docs-toc {
   scrollbar-width: thin;
   scrollbar-color: $body-bg-dark $body-bg-dark;
 }
 
 [data-dark-mode] body .docs-links::-webkit-scrollbar,
+[data-dark-mode] body .offcanvas-body::-webkit-scrollbar,
 [data-dark-mode] body .docs-toc::-webkit-scrollbar {
   width: 5px;
 }
 
 [data-dark-mode] body .docs-links::-webkit-scrollbar-track,
+[data-dark-mode] body .offcanvas-body::-webkit-scrollbar-track,
 [data-dark-mode] body .docs-toc::-webkit-scrollbar-track {
   background: $body-bg-dark;
 }
 
 [data-dark-mode] body .docs-links::-webkit-scrollbar-thumb,
+[data-dark-mode] body .offcanvas-body::-webkit-scrollbar-thumb,
 [data-dark-mode] body .docs-toc::-webkit-scrollbar-thumb {
   background: $body-bg-dark;
 }
 
 [data-dark-mode] body .docs-links:hover,
+[data-dark-mode] body .offcanvas-body:hover,
 [data-dark-mode] body .docs-toc:hover {
   scrollbar-width: thin;
   scrollbar-color: $border-dark $body-bg-dark;
 }
 
 [data-dark-mode] body .docs-links:hover::-webkit-scrollbar-thumb,
+[data-dark-mode] body .offcanvas-body:hover::-webkit-scrollbar-thumb,
 [data-dark-mode] body .docs-toc:hover::-webkit-scrollbar-thumb {
   background: $border-dark;
 }
 
 [data-dark-mode] body .docs-links::-webkit-scrollbar-thumb:hover,
+[data-dark-mode] body .offcanvas-body::-webkit-scrollbar-thumb:hover,
 [data-dark-mode] body .docs-toc::-webkit-scrollbar-thumb:hover {
   background: $border-dark;
 }
